--- a/equipe.html
+++ b/equipe.html
@@ -65,28 +65,34 @@
   <script>
     firebase.auth().onAuthStateChanged(user => {
       if (!user) {
-        alert("Faça login para ver sua equipe.");
         window.location.href = "index.html";
         return;
       }
 
-      const uid = user.uid;  // Pega o UID do usuário logado
+      const uid = user.uid;
       const db = firebase.database();
 
-      // Verifica se o usuário tem um código de indicação
+      // Pegamos o código de indicação do usuário logado
       db.ref("usuarios/" + uid + "/codigoIndicacao").once("value").then(snap => {
         const meuCodigo = snap.val();
         if (!meuCodigo) {
-          alert("Código de indicação não encontrado.");
+          alert("Você ainda não tem código de indicação.");
           return;
         }
 
-        // Agora buscamos os membros que têm o código de indicação igual ao de meuCodigo
-        db.ref("usuarios").orderByChild("codigoIndicacao").equalTo(meuCodigo).once("value").then(snapshot => {
+        // Agora buscamos os membros indicados por esse código
+        db.ref("usuarios").orderByChild("indicador").equalTo(meuCodigo).once("value").then(snapshot => {
           let totalMembros = 0;
           let totalComissao = 0;
           const lista = document.getElementById("listaEquipe");
-          lista.innerHTML = "";  // Limpa a lista
+          lista.innerHTML = "";
+
+          if (!snapshot.exists()) {
+            lista.innerHTML = "<p style='text-align:center;'>Nenhum membro encontrado.</p>";
+            document.getElementById("totalEquipe").textContent = "0";
+            document.getElementById("totalComissao").textContent = "0.00";
+            return;
+          }
 
           snapshot.forEach(child => {
             const dados = child.val();
@@ -94,26 +100,24 @@
             const comissao = parseFloat(dados.recebimento || 0);
             totalComissao += comissao;
 
-            // Exibe as informações do membro
             const li = document.createElement("li");
             li.classList.add("card");
             li.innerHTML = `
               <strong>Nome:</strong> ${dados.nome || "Sem nome"}<br>
-              <strong>Telefone:</strong> ${dados.senha || "Sem telefone"}<br>
-              <strong>Saldo:</strong> R$ ${dados.saldo || 0.00}<br>
+              <strong>Telefone:</strong> ${dados.telefone || "Sem telefone"}<br>
+              <strong>Saldo:</strong> R$ ${parseFloat(dados.saldo || 0).toFixed(2)}<br>
               <strong>Comissão:</strong> R$ ${comissao.toFixed(2)}
             `;
             lista.appendChild(li);
           });
 
-          // Exibe o total de membros e comissão
           document.getElementById("totalEquipe").textContent = totalMembros;
           document.getElementById("totalComissao").textContent = totalComissao.toFixed(2);
         }).catch(error => {
-          alert("Erro ao recuperar os dados: " + error.message);
+          alert("Erro ao buscar membros: " + error.message);
         });
       }).catch(error => {
-        alert("Erro ao acessar os dados do usuário: " + error.message);
+        alert("Erro ao acessar seu código de indicação: " + error.message);
       });
     });
   </script>
