--- a/equipe.html
+++ b/equipe.html
@@ -50,6 +50,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
   <script>
+    // Configuração do Firebase — substitua pelos seus dados
     const firebaseConfig = {
       apiKey: "SUA_API_KEY",
       authDomain: "SEU_PROJETO.firebaseapp.com",
@@ -63,62 +64,60 @@
   </script>
 
   <script>
+    // Verifica se o usuário está logado antes de carregar os dados
     firebase.auth().onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html";
-        return;
-      }
+      if (user) {
+        const uid = user.uid;
+        const db = firebase.database();
 
-      const uid = user.uid;
-      const db = firebase.database();
-
-      // Pegamos o código de indicação do usuário logado
-      db.ref("usuarios/" + uid + "/codigoIndicacao").once("value").then(snap => {
-        const meuCodigo = snap.val();
-        if (!meuCodigo) {
-          alert("Você ainda não tem código de indicação.");
-          return;
-        }
-
-        // Agora buscamos os membros indicados por esse código
-        db.ref("usuarios").orderByChild("indicador").equalTo(meuCodigo).once("value").then(snapshot => {
-          let totalMembros = 0;
-          let totalComissao = 0;
-          const lista = document.getElementById("listaEquipe");
-          lista.innerHTML = "";
-
-          if (!snapshot.exists()) {
-            lista.innerHTML = "<p style='text-align:center;'>Nenhum membro encontrado.</p>";
-            document.getElementById("totalEquipe").textContent = "0";
-            document.getElementById("totalComissao").textContent = "0.00";
+        // Busca o código de indicação do usuário logado
+        db.ref("usuarios/" + uid + "/codigoIndicacao").once("value").then(snap => {
+          const meuCodigo = snap.val();
+          if (!meuCodigo) {
+            alert("Código de indicação não encontrado.");
             return;
           }
 
-          snapshot.forEach(child => {
-            const dados = child.val();
-            totalMembros++;
-            const comissao = parseFloat(dados.recebimento || 0);
-            totalComissao += comissao;
+          // Busca os membros que têm esse código de indicação
+          db.ref("usuarios").orderByChild("codigoIndicacao").equalTo(meuCodigo).once("value").then(snapshot => {
+            let totalMembros = 0;
+            let totalComissao = 0;
+            const lista = document.getElementById("listaEquipe");
+            lista.innerHTML = "";  // Limpa a lista
 
-            const li = document.createElement("li");
-            li.classList.add("card");
-            li.innerHTML = `
-              <strong>Nome:</strong> ${dados.nome || "Sem nome"}<br>
-              <strong>Telefone:</strong> ${dados.telefone || "Sem telefone"}<br>
-              <strong>Saldo:</strong> R$ ${parseFloat(dados.saldo || 0).toFixed(2)}<br>
-              <strong>Comissão:</strong> R$ ${comissao.toFixed(2)}
-            `;
-            lista.appendChild(li);
+            snapshot.forEach(child => {
+              const dados = child.val();
+              totalMembros++;
+              const comissao = parseFloat(dados.recebimento || 0);
+              totalComissao += comissao;
+
+              const li = document.createElement("li");
+              li.classList.add("card");
+              li.innerHTML = `
+                <strong>Nome:</strong> ${dados.nome || "Sem nome"}<br>
+                <strong>Telefone:</strong> ${dados.senha || "Sem telefone"}<br>
+                <strong>Saldo:</strong> R$ ${dados.saldo || 0.00}<br>
+                <strong>Comissão:</strong> R$ ${comissao.toFixed(2)}
+              `;
+              lista.appendChild(li);
+            });
+
+            document.getElementById("totalEquipe").textContent = totalMembros;
+            document.getElementById("totalComissao").textContent = totalComissao.toFixed(2);
+          }).catch(error => {
+            alert("Erro ao recuperar os dados: " + error.message);
           });
-
-          document.getElementById("totalEquipe").textContent = totalMembros;
-          document.getElementById("totalComissao").textContent = totalComissao.toFixed(2);
         }).catch(error => {
-          alert("Erro ao buscar membros: " + error.message);
+          alert("Erro ao acessar os dados do usuário: " + error.message);
         });
-      }).catch(error => {
-        alert("Erro ao acessar seu código de indicação: " + error.message);
-      });
+
+      } else {
+        // Só redireciona se realmente não estiver logado
+        setTimeout(() => {
+          alert("Faça login para ver sua equipe.");
+          window.location.href = "index.html";
+        }, 200);
+      }
     });
   </script>
 
