--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             const total = snapshot.numChildren() + 1;
             const meuCodigo = total;
 
+            // Salvando dados do usuário no Firebase
             db.ref("usuarios/" + telefone).set({
               nome,
               senha,
@@ -123,7 +124,7 @@
               recebimento: 0,
               ultimoCheckin: "",
               codigoIndicacao,
-              codigo: meuCodigo,
+              codigo: meuCodigo,  // Código único gerado
               timestamp: Date.now()
             }).then(() => {
               document.getElementById("codigo-gerado").innerText =
@@ -132,7 +133,7 @@
 
               localStorage.setItem("telefoneLogado", telefone);
               setTimeout(() => {
-                window.location.href = "H.html";
+                window.location.href = "H.html"; // Redireciona após cadastro
               }, 4000);
             });
           });
@@ -150,7 +151,7 @@
         const user = snapshot.val();
         if (user && user.senha === senha) {
           localStorage.setItem("telefoneLogado", telefone);
-          window.location.href = "H.html";
+          window.location.href = "H.html"; // Redireciona após login bem-sucedido
         } else {
           alert("Telefone ou senha incorretos!");
         }
