--- a/ganhos2.html
+++ b/ganhos2.html
@@ -135,7 +135,8 @@
     function copyText(id) {
       const text = document.getElementById(id).textContent;
       navigator.clipboard.writeText(text).then(() => {
-        alert("Copiado!");
+        // Feedback visual para o usuário
+        alert("Texto copiado!");
       });
     }
 
