--- a/extrato.html
+++ b/extrato.html
@@ -1,93 +1,85 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Extrato de Retiradas</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <meta charset="UTF-8">
+  <title>Extrato de Retirada</title>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f2f5f7;
+      padding: 30px;
+      color: #333;
+    }
+    h2 {
+      color: #007bff;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+    .pending {
+      background-color: #ffc107;
+      color: black;
+    }
+    .approved {
+      background-color: #28a745;
+      color: white;
+    }
+    .rejected {
+      background-color: #dc3545;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-  <header style="display: flex; justify-content: space-between; align-items: center; padding: 15px 20px; background-color: #f5f5f5; border-bottom: 1px solid #ccc;">
-    <h2 style="margin: 0;">Extrato de Retiradas</h2>
-  </header>
 
-  <!-- EXTRATO -->
-  <section class="extrato">
-    <table id="extratoTable" style="width: 100%; border-collapse: collapse;">
-      <thead>
-        <tr>
-          <th>Data</th>
-          <th>Valor Solicitado</th>
-          <th>Valor Recebido</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody id="extratoBody">
-        <!-- Aqui será preenchido dinamicamente -->
-      </tbody>
-    </table>
-  </section>
+<h2>Extrato de Retirada</h2>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
-      authDomain: "hinvest-f4354.firebaseapp.com",
-      databaseURL: "https://hinvest-f4354-default-rtdb.firebaseio.com",
-      projectId: "hinvest-f4354",
-      storageBucket: "hinvest-f4354.appspot.com",
-      messagingSenderId: "646397677016",
-      appId: "1:646397677016:web:f05ca27a38439568bff6ad"
-    };
+<div id="retiradasContainer"></div>
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const userId = localStorage.getItem("telefoneLogado");
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
+    authDomain: "hinvest-f4354.firebaseapp.com",
+    databaseURL: "https://hinvest-f4354-default-rtdb.firebaseio.com",
+    projectId: "hinvest-f4354",
+    storageBucket: "hinvest-f4354.appspot.com",
+    messagingSenderId: "646397677016",
+    appId: "1:646397677016:web:f05ca27a38439568bff6ad"
+  };
 
-    // Mostrar extrato de retiradas
-    document.addEventListener("DOMContentLoaded", () => {
-      if (!userId) {
-        alert("Usuário não logado.");
-        window.location.href = "index.html";
-        return;
-      }
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-      const extratoRef = db.ref("usuarios/" + userId + "/extratoRetirada");
+  // Função para mostrar extrato de retirada
+  db.ref("usuarios").on("child_added", snapshot => {
+    const telefone = snapshot.key;
+    db.ref("usuarios/" + telefone + "/extratoRetirada").on("child_added", childSnapshot => {
+      const retirada = childSnapshot.val();
+      const statusClass = retirada.status === "Aprovado" ? "approved" :
+                          (retirada.status === "Rejeitado" ? "rejected" : "pending");
 
-      extratoRef.on("value", (snapshot) => {
-        const data = snapshot.val() || {};
-        const extratoBody = document.getElementById("extratoBody");
-        extratoBody.innerHTML = ""; // Limpa a tabela antes de atualizar
+      const valorRetirado = parseFloat(retirada.valor).toFixed(2);
+      const recebimento = parseFloat(retirada.recebimento || 0).toFixed(2);
+      const dataRetirada = retirada.ultimoCheckin || "Data não disponível";
 
-        for (const key in data) {
-          const item = data[key];
-          const tr = document.createElement("tr");
-
-          // Definindo o status e cor
-          let statusColor = "orange";  // Inicialmente "Aguardando" (laranja)
-          let statusText = "Aguardando";  // Status que vai ser exibido inicialmente
-
-          // Se o status no banco de dados for "Aprovado" ou "Rejeitado", atualiza o status
-          if (item.status === "Aprovado") {
-            statusColor = "green";  // Cor verde para "Aprovado"
-            statusText = "Aprovado";  // Texto para "Aprovado"
-          } else if (item.status === "Rejeitado") {
-            statusColor = "red";  // Cor vermelha para "Rejeitado"
-            statusText = "Rejeitado";  // Texto para "Rejeitado"
-          }
-
-          // Atualizando a linha da tabela
-          tr.innerHTML = `
-            <td>${item.ultimoCheckin}</td>
-            <td>R$ ${item.valor}</td>
-            <td>R$ ${item.recebimento}</td>
-            <td style="color: ${statusColor};">${statusText}</td>
-          `;
-          extratoBody.appendChild(tr);
-        }
-      });
+      const container = document.getElementById("retiradasContainer");
+      container.innerHTML += `
+        <div class="card ${statusClass}">
+          <b>Usuário:</b> ${telefone}<br>
+          <b>Valor retirado:</b> R$${valorRetirado}<br>
+          <b>Recebido:</b> R$${recebimento}<br>
+          <b>Data:</b> ${dataRetirada}<br>
+          <b>Status:</b> ${retirada.status || "Aguardando Aprovação"}
+        </div>`;
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
