--- a/extrato.html
+++ b/extrato.html
@@ -8,15 +8,15 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f2f5f7;
+      background: #000; /* Fundo preto */
       padding: 30px;
-      color: #333;
+      color: #fff; /* Cor do texto em branco para contraste */
     }
     h2 {
       color: #007bff;
     }
     .card {
-      background: white;
+      background: #222; /* Fundo escuro para os cartões */
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       padding: 20px;
@@ -61,8 +61,13 @@
     const telefone = snapshot.key;
     db.ref("usuarios/" + telefone + "/extratoRetirada").on("child_added", childSnapshot => {
       const retirada = childSnapshot.val();
+      
+      // Verificando se o status está vazio, se sim, será "Aguardando"
       const statusClass = retirada.status === "Aprovado" ? "approved" :
                           (retirada.status === "Rejeitado" ? "rejected" : "pending");
+
+      // Definindo o status como "Aguardando" caso o status não esteja definido
+      const statusTexto = retirada.status || "Aguardando";
 
       const valorRetirado = parseFloat(retirada.valor).toFixed(2);
       const recebimento = parseFloat(retirada.recebimento || 0).toFixed(2);
@@ -75,7 +80,7 @@
           <b>Valor retirado:</b> R$${valorRetirado}<br>
           <b>Recebido:</b> R$${recebimento}<br>
           <b>Data:</b> ${dataRetirada}<br>
-          <b>Status:</b> ${retirada.status || "Aguardando Aprovação"}
+          <b>Status:</b> ${statusTexto}
         </div>`;
     });
   });
